tests/algorithms/transpiler/Zig/graphs/graph_adjacency_list.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/graphs/graph_adjacency_list.zig:18:43: error: expected type '[][]const u8', found '*[0]i64'
        adj.put(v, @constCast((&[_]i64{}))[0..]) catch unreachable;
                   ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/algorithms/transpiler/Zig/graphs/graph_adjacency_list.zig:18:43: note: pointer type child 'i64' cannot cast into pointer type child '[]const u8'
/opt/zig-0.14.0/lib/std/hash_map.zig:321:48: note: parameter type declared here
        pub fn put(self: *Self, key: K, value: V) Allocator.Error!void {
                                               ^
referenced by:
    mochi_main: /workspace/mochi/tests/algorithms/transpiler/Zig/graphs/graph_adjacency_list.zig:172:32
    main: /workspace/mochi/tests/algorithms/transpiler/Zig/graphs/graph_adjacency_list.zig:187:19
    4 reference(s) hidden; use '-freference-trace=6' to see all references
/workspace/mochi/tests/algorithms/transpiler/Zig/graphs/graph_adjacency_list.zig:49:39: error: expected type '[][]const u8', found '*[0]i64'
    adj.put(v, @constCast((&[_]i64{}))[0..]) catch unreachable;
               ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/algorithms/transpiler/Zig/graphs/graph_adjacency_list.zig:49:39: note: pointer type child 'i64' cannot cast into pointer type child '[]const u8'
/opt/zig-0.14.0/lib/std/hash_map.zig:321:48: note: parameter type declared here
        pub fn put(self: *Self, key: K, value: V) Allocator.Error!void {
                                               ^